terminado desktop y tbl

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,25 +8,27 @@
 
 html {
   scroll-behavior: smooth;
+  width: 100%;
 }
 
 section[id] {
-  scroll-margin-top: 70px;
+  scroll-margin-top: 90px;
 }
 
 body {
   font-family: "calibri";
 }
 
-/*** TOP BAR ***/
-.container {
-  width: 100%;
-  max-width: 2000px;
-  min-width: 320px;
+a {
+  text-decoration: none;
+  color: rgb(23, 186, 97);
+  font-weight: bold;
 }
 
 .topheader {
+  box-shadow: 0 4px 5px rgb(186, 186, 186);
   position: fixed;
+  background-color: rgb(253, 253, 253);
   left: 0;
   top: 0;
   width: 100%;
@@ -34,34 +36,48 @@ body {
 
 .topnav {
   display: flex;
-  justify-content: space-evenly;
-  background-color: #fff;
-  color: rgb(255, 94, 0);
-  /*** LOGO ***/
-}
-.topnav .logo {
-  display: flex;
-  align-items: center;
-}
-.topnav .menu {
-  list-style: none;
-  display: flex;
-  flex-direction: row;
   justify-content: space-between;
+  margin: 0 auto;
+}
+
+.logo {
+  display: flex;
   align-items: center;
 }
-.topnav .menu li {
+
+/**MENU**/
+.menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.menu li {
   padding: 0 15px;
 }
-.topnav .menu a {
+.menu li a {
   color: rgb(255, 94, 0);
-  text-decoration: none;
-  font-weight: bold;
+  font-size: 18px;
+  line-height: 50px;
+  text-transform: uppercase;
 }
-.topnav .open-menu,
-.topnav .close-menu {
+.menu li .login {
+  color: rgb(23, 186, 97);
+  font-size: 22px;
+  border-left: 1px solid rgb(23, 186, 97);
+  padding-left: 25px;
+}
+
+.open-menu,
+.close-menu {
   display: none;
-  justify-content: center;
+}
+.open-menu img,
+.close-menu img {
+  height: 50px;
+  width: 50px;
+  background: none;
 }
 
 /*** FOOTER ***/
@@ -111,25 +127,37 @@ body {
 
 /**** SECC SUC ****/
 .main_suc {
-  height: 85vh;
+  height: 86vh;
   background-image: url("../assets/img/sucursales.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-left: 5%;
   border: 1px solid rgb(211, 211, 211);
   border-radius: 20px;
-  padding: 3em 0 0 5em;
   margin: 3em;
   box-shadow: 1em 1em 15px rgba(255, 94, 0, 0.85);
 }
 .main_suc .title {
   color: #fff;
+  padding: 0;
+  font-size: 30px;
+  text-decoration: underline;
 }
-.main_suc iframe {
-  padding-top: 15px;
-  padding-bottom: 15px;
+.main_suc .vid {
   width: 50%;
-  height: 18em;
+  height: 59%;
+  box-shadow: 1em 1em 15px rgba(255, 94, 0, 0.85);
+  border-radius: 20px;
+  border: 1px solid black;
+  object-fit: cover;
+}
+.main_suc .vid iframe {
+  object-fit: cover;
+  border-radius: 20px;
 }
 .main_suc .form-suc {
   font-size: 18px;
@@ -137,47 +165,21 @@ body {
 
 /**** SECC SOBRE NOSOTROS ****/
 .main_us {
+  height: 55vh;
+  display: flex;
   background-image: url("../assets/img/us.png");
   background-repeat: no-repeat;
   background-size: cover;
-  border: 1px solid rgb(211, 211, 211);
+  background-position: center;
+  padding-top: 20%;
   border-radius: 20px;
-  padding: 3em 0 0 5em;
   margin: 3em;
   box-shadow: 1em 1em 15px rgba(255, 94, 0, 0.85);
-  padding-bottom: 12%;
-}
-
-.historia {
-  padding: 10em 0 1em 1em;
-  color: #000;
-  font-size: 14px;
-  overflow-y: hidden;
-}
-
-.span-1,
-.span-2 {
-  font-weight: bold;
-  text-shadow: 1px 1px 1px grey;
-}
-
-.span-1 {
-  color: rgb(23, 186, 97);
-}
-
-.span-2 {
-  color: rgb(255, 94, 0);
-}
-
-.titulo_us {
-  color: rgb(255, 94, 0);
-  font-size: 50px;
 }
 
 /*CARRUSEL*/
 .contenedor_carrusel {
   width: 105%;
-  margin-top: 13em;
   display: flex;
   flex-direction: row;
   margin-left: -4.5em;
@@ -209,8 +211,8 @@ body {
 }
 /*ANIMACION - OBRAS SOCIALES*/
 .h2-carrusel {
-  margin: 4.5% 0 0 10%;
-  font-size: 20px;
+  margin: 4.5%;
+  font-size: 30px;
   text-decoration: underline;
 }
 .h2-carrusel span {
@@ -233,10 +235,14 @@ body {
   }
 }
 /**** SECC CONTACTO ****/
+.main_contact {
+  height: 80vh;
+}
+
 .form-contact {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: bold;
-  line-height: 14px;
+  line-height: 8px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -249,7 +255,6 @@ body {
   border: 1px solid rgb(211, 211, 211);
   border-radius: 20px;
   border-radius: 20px;
-  padding: 3em 0 0 5em;
   margin: 3em;
   box-shadow: 1em 1em 15px rgba(255, 94, 0, 0.85);
   padding-top: 2%;
@@ -261,6 +266,8 @@ body {
 
 .box-c2 {
   grid-area: box-c2;
+  padding: 0;
+  line-height: 10px;
 }
 
 .box-c1,
@@ -273,15 +280,15 @@ body {
 .box-c1 p,
 .box-c2 p {
   justify-self: center;
+  padding-bottom: 10px;
 }
 
 .box-c3 {
   grid-area: box-c3;
-  padding-top: 2%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  line-height: 5px;
+  line-height: 8px;
 }
 .box-c3 .reset,
 .box-c3 .submit {
@@ -289,131 +296,256 @@ body {
 }
 
 /**** SECC PRESTACIONES ****/
-.grid-prest {
-  height: 87vh;
-  margin-top: 2%;
+.main_prest {
+  width: 100%;
+  height: 160vh;
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   background: linear-gradient(rgba(0, 91, 0, 0.5), #fff);
 }
-.grid-prest .prest2 {
-  margin-top: 60px;
+.main_prest .prest-txt {
+  margin-top: 9vh;
+  font-size: 40px;
+  color: #fff;
+  text-shadow: 5px 5px black;
+}
+.main_prest .prest3 {
+  margin-top: 52px;
+  width: 30%;
+  background-color: #fff;
+  border-radius: 10px;
+}
+.main_prest .prest3 p {
+  padding-inline-start: 10px;
+  font-size: 30px;
+}
+.main_prest .prest1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2vh;
+}
+.main_prest .prest1 img {
+  margin: 10px;
+  border-radius: 10%;
+  box-shadow: 10px 10px 1em rgb(255, 94, 0);
+}
+.main_prest .prest2 {
   display: grid;
   align-items: center;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(2, 1fr);
 }
-.grid-prest .prest2 img {
-  border-radius: 10%;
+.main_prest .prest2 img {
   margin: 10px;
-}
-.grid-prest .prest3 {
-  width: 80%;
-  background-image: url();
+  border-radius: 10%;
+  box-shadow: 10px 10px 1em rgb(0, 81, 0);
 }
 
-/*********** TABLET 600px ***********/
-@media (max-width: 768px) {
-  .topnav {
-    justify-content: space-evenly;
-    /*** LOGO ***/
-    /*** MENU ***/
+.main_enf,
+.main_kine,
+.main_nutri {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+.main_enf .container-enf,
+.main_enf .container-nutri,
+.main_kine .container-enf,
+.main_kine .container-nutri,
+.main_nutri .container-enf,
+.main_nutri .container-nutri {
+  width: 75%;
+  margin-top: 10vh;
+  border: 4px solid green;
+  box-shadow: 5px 5px 15px green;
+  border-radius: 20px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 30px;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+.main_enf .container-enf img,
+.main_enf .container-nutri img,
+.main_kine .container-enf img,
+.main_kine .container-nutri img,
+.main_nutri .container-enf img,
+.main_nutri .container-nutri img {
+  float: right;
+  width: 50%;
+}
+.main_enf .container-enf p,
+.main_enf .container-nutri p,
+.main_kine .container-enf p,
+.main_kine .container-nutri p,
+.main_nutri .container-enf p,
+.main_nutri .container-nutri p {
+  color: black;
+}
+
+.main_enf {
+  background: url("../assets/img/prestaciones.jpg");
+  background-repeat: repeat;
+  background-size: contain;
+}
+
+.main_kine {
+  background: url("../assets/img/kine3.png");
+  background-size: cover;
+}
+
+.main_nutri {
+  background: url("../assets/img/nutri2.jpg");
+  background-size: contain;
+}
+
+.container-kine {
+  width: 75%;
+  margin-top: 10vh;
+  border: 4px solid green;
+  box-shadow: 5px 5px 15px green;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-around;
+}
+.container-kine .kinesioterapia,
+.container-kine .fisioterapia {
+  padding: 20px;
+  text-align: justify;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 30px;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+.container-kine .kinesioterapia img,
+.container-kine .fisioterapia img {
+  float: right;
+  width: 75%;
+  padding: 20px;
+}
+
+/******************************************************** TABLET 768 */
+@media (max-width: 800px) {
+  section[id] {
+    scroll-margin-top: 90px;
   }
-  .topnav .menu {
-    flex-direction: column;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    align-items: center;
-    background-color: rgba(23, 186, 97, 0.5);
-    height: 100%;
-    overflow-y: auto;
-    opacity: 0;
-    pointer-events: none;
+  .logo {
+    padding-left: 20px;
   }
-  .topnav .menu li {
-    padding: 0;
-    padding-bottom: 100px;
+  .logo img {
+    height: 50px;
   }
-  .topnav .menu a {
-    color: #fff;
-    font-size: 40px;
+  .menu {
+    height: 50px;
   }
-  .topnav .menu a:hover {
-    color: rgb(255, 94, 0);
-    transform: scale();
-    font-size: 40px;
-  }
-  .topnav .open-menu,
-.topnav .close-menu {
-    display: block;
-    border: none;
-    background-color: none;
-    cursor: pointer;
-  }
-  .topnav .close-menu {
-    align-self: flex-end;
-    padding: 0px 10px;
-  }
-  .topnav .menu_opened {
-    opacity: 1;
-    pointer-events: all;
-  }
-  .topnav .open-menu img,
-.topnav .close-menu img {
-    background: none;
-  }
-  .main_index {
-    background-image: url("../assets/img/index-tbl.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .main_index h1 {
-    padding-top: 400px;
-    font-size: 100px;
-  }
-  .main_index h2 {
-    font-size: 40px;
-  }
-  .main_index span {
-    color: rgb(255, 94, 0);
-    font-size: 35px;
-  }
-  .main_index p {
+  .menu li a {
     font-size: 12px;
   }
-  /**** FOOTER - TABLET 600px ****/
-  .contenedor-footer {
+  .main_index {
+    height: 100vh;
+    background-image: url("../assets/img/index-tbl.jpg");
+    background-size: cover;
+  }
+  .main_suc {
+    height: 87vh;
+    background-image: url("../assets/img/suc-tbl.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border: 1px solid rgb(211, 211, 211);
+    border-radius: 20px;
+    margin: 3em;
+    box-shadow: 1em 1em 15px rgba(255, 94, 0, 0.85);
+    padding-left: 3%;
+  }
+  .main_suc .title {
+    color: rgb(255, 94, 0);
+  }
+  .main_suc .vid {
+    margin-top: 5%;
+    box-shadow: 1em 1em 15px rgba(255, 94, 0, 0.85);
+    border-radius: 20px;
+    border: none;
+    object-fit: cover;
+  }
+  .main_suc .form-suc {
+    color: #fff;
+  }
+  .main_us {
+    height: 61vh;
+    background-image: url("../assets/img/us-tbl.png");
+    background-size: none;
+  }
+  /**** SECC CONTACTO ****/
+  .main_contact {
+    height: 83vh;
+  }
+  .main_contact .form-contact {
+    height: 50vh;
+    line-height: 8px;
     display: flex;
-    height: 70px;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-image: url("../assets/img/contacto-tbl.jpg");
+    border: 1px solid rgb(211, 211, 211);
+    border-radius: 20px;
+    border-radius: 20px;
+    margin: 3em;
+    box-shadow: 1em 1em 15px rgba(255, 94, 0, 0.85);
+    padding-top: 0%;
+    margin-top: 10%;
+    font-size: 20px;
   }
-  .redes {
+  /**** SECC PRESTACIONES ****/
+  .main_prest {
+    height: 145vh;
     display: flex;
-    gap: 110px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background: linear-gradient(rgb(255, 183, 0), #fff);
   }
-  .box-3 img,
-.box-4 img,
-.box-5 img {
+  .main_prest .prest-txt {
+    padding-top: 10px;
+    font-size: 40px;
+    color: #fff;
+    text-shadow: 5px 5px black;
     margin-bottom: 0;
-    margin-left: 0;
   }
-  .box-1,
-.box-6,
-.box-7 {
-    display: none;
+  .main_prest .prest1 {
+    display: flex;
+    margin-top: 0;
+    margin-bottom: 30px;
   }
-  .box-2 {
-    display: none;
+  .main_prest .prest1 img {
+    margin: 10px;
+    border-radius: 10%;
+    box-shadow: 10px 10px 1em purple;
+  }
+  .main_prest .prest2 {
+    margin-bottom: 20vh;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    margin-bottom: 0;
+  }
+  .main_prest .prest2 img {
+    width: 89%;
+    box-shadow: 6px 6px 0.5em rgb(0, 81, 0);
+    width: 75%;
+    margin-left: 10%;
+  }
+  .main_prest .prest3 {
+    margin-top: 0;
+    width: 90%;
+    margin-bottom: -15%;
+  }
+  .main_prest .prest3 p {
+    padding-inline-start: 10px;
+    font-size: 30px;
   }
 }
 
