--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@
 
 html {
   scroll-behavior: smooth;
-  width: 100%;
 }
 
 section[id] {
@@ -67,17 +66,6 @@ a {
   font-size: 22px;
   border-left: 1px solid rgb(23, 186, 97);
   padding-left: 25px;
-}
-
-.open-menu,
-.close-menu {
-  display: none;
-}
-.open-menu img,
-.close-menu img {
-  height: 50px;
-  width: 50px;
-  background: none;
 }
 
 /*** FOOTER ***/
@@ -176,6 +164,9 @@ a {
   margin: 3em;
   box-shadow: 1em 1em 15px rgba(255, 94, 0, 0.85);
 }
+.main_us .historia-tbl-mbl {
+  display: none;
+}
 
 /*CARRUSEL*/
 .contenedor_carrusel {
@@ -209,7 +200,6 @@ a {
     opacity: 1;
   }
 }
-/*ANIMACION - OBRAS SOCIALES*/
 .h2-carrusel {
   margin: 4.5%;
   font-size: 30px;
@@ -427,7 +417,7 @@ a {
   padding: 20px;
 }
 
-/******************************************************** TABLET 768 */
+/******************************************************** TABLET 800px */
 @media (max-width: 800px) {
   section[id] {
     scroll-margin-top: 90px;
@@ -462,7 +452,8 @@ a {
     padding-left: 3%;
   }
   .main_suc .title {
-    color: rgb(255, 94, 0);
+    color: rgb(23, 186, 97);
+    text-shadow: 2px 2px #fff;
   }
   .main_suc .vid {
     margin-top: 5%;
@@ -478,6 +469,9 @@ a {
     height: 61vh;
     background-image: url("../assets/img/us-tbl.png");
     background-size: none;
+  }
+  .main_us .historia-tbl-mbl {
+    display: none;
   }
   /**** SECC CONTACTO ****/
   .main_contact {
@@ -544,6 +538,145 @@ a {
     margin-bottom: -15%;
   }
   .main_prest .prest3 p {
+    padding-inline-start: 10px;
+    font-size: 30px;
+  }
+}
+/******************************************************** MOBILE 420 */
+@media (max-width: 420px) {
+  section[id] {
+    scroll-margin-top: 65px;
+  }
+  .logo {
+    padding-left: 0;
+  }
+  .main_index {
+    height: 100vh;
+    margin-top: 40px;
+    background-image: url("../assets/img/index-mbl.jpg");
+    background-size: cover;
+    background-position: center;
+  }
+  .main_index h1 {
+    padding-top: 350px;
+    font-size: 50px;
+    color: rgb(23, 186, 97);
+  }
+  .main_index h2 {
+    color: rgb(23, 186, 97);
+    font-size: 20px;
+  }
+  .main_suc {
+    height: 87vh;
+    background-image: url("../assets/img/suc-mbl.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border: 1px solid rgb(211, 211, 211);
+    border-radius: 20px;
+    margin: 3em;
+    box-shadow: 1em 1em 15px rgba(255, 94, 0, 0.85);
+    padding-left: 5%;
+  }
+  .main_suc .title {
+    color: rgb(255, 94, 0);
+    font-size: 25px;
+  }
+  .main_suc .vid {
+    margin-top: 3%;
+    box-shadow: 1em 1em 15px rgba(255, 94, 0, 0.85);
+    border-radius: 20px;
+    border: none;
+    object-fit: cover;
+  }
+  .main_suc .form-suc {
+    color: #fff;
+  }
+  /**** SECC SUCURSALES ****/
+  .main_us {
+    height: 70vh;
+    background-image: none;
+    box-shadow: none;
+    padding-top: 0;
+  }
+  .main_us .carrusel-fijo {
+    display: flex;
+  }
+  .main_us .historia-tbl-mbl {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+  }
+  .main_us .historia-tbl-mbl .txt-historia {
+    font-size: 20px;
+    margin-top: 70px;
+  }
+  .main_us .historia-tbl-mbl h2 {
+    text-decoration: underline;
+    font-size: 30px;
+  }
+  .main_us .historia-tbl-mbl h2 span {
+    color: rgb(23, 186, 97);
+    text-decoration: underline;
+  }
+  /**** SECC CONTACTO ****/
+  .main_contact {
+    /**** SECC SERVICIOS ****/
+  }
+  .main_contact .h2-carrusel {
+    display: none;
+  }
+  .main_contact .h2-carrusel .carrusel {
+    display: none;
+  }
+  .main_contact .h2-carrusel .form-contact {
+    background-image: url("../assets/img/contacto-tbl.jpg");
+    justify-content: center;
+    align-items: center;
+  }
+  .main_contact .main_prest {
+    height: 145vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background: linear-gradient(rgb(255, 183, 0), #fff);
+  }
+  .main_contact .main_prest .prest-txt {
+    padding-top: 10px;
+    font-size: 40px;
+    color: #fff;
+    text-shadow: 5px 5px black;
+    margin-bottom: 0;
+  }
+  .main_contact .main_prest .prest1 {
+    display: flex;
+    margin-top: 0;
+    margin-bottom: 30px;
+  }
+  .main_contact .main_prest .prest1 img {
+    margin: 10px;
+    border-radius: 10%;
+    box-shadow: 10px 10px 1em purple;
+  }
+  .main_contact .main_prest .prest2 {
+    margin-bottom: 20vh;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    margin-bottom: 0;
+  }
+  .main_contact .main_prest .prest2 img {
+    width: 89%;
+    box-shadow: 6px 6px 0.5em rgb(0, 81, 0);
+    width: 75%;
+    margin-left: 10%;
+  }
+  .main_contact .main_prest .prest3 {
+    margin-top: 0;
+    width: 90%;
+    margin-bottom: -15%;
+  }
+  .main_contact .main_prest .prest3 p {
     padding-inline-start: 10px;
     font-size: 30px;
   }
