--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,7 +9,7 @@
 
 html {
     scroll-behavior: smooth;
-    width: 100%;
+
 }
 
 section[id] {
@@ -76,17 +76,7 @@ a {
     }
 }
 
-.open-menu,
-.close-menu {
-    display: none;
 
-    img {
-        height: 50px;
-        width: 50px;
-        background: none;
-    }
-
-}
 
 
 /*** FOOTER ***/
@@ -199,6 +189,10 @@ a {
     background-position: center;
     padding-top: 20%;
     @include box-shadow;
+
+    .historia-tbl-mbl {
+        display: none;
+    }
 }
 
 
@@ -240,8 +234,6 @@ a {
         opacity: 1;
     }
 }
-
-/*ANIMACION - OBRAS SOCIALES*/
 
 
 .h2-carrusel {
@@ -474,7 +466,7 @@ a {
 }
 
 
-/******************************************************** TABLET 768 */
+/******************************************************** TABLET 800px */
 @media (max-width: 800px) {
     section[id] {
         scroll-margin-top: 90px;
@@ -512,12 +504,15 @@ a {
         background-size: cover;
         background-position: center;
         border: 1px solid rgb(211, 211, 211);
-        @include box-shadow;
+        border-radius: 20px;
+        margin: 3em;
+        box-shadow: 1em 1em 15px rgb(255, 94, 0, 85%);
         padding-left: 3%;
 
 
         .title {
-            color: $color-secundario;
+            color: $color-principal;
+            text-shadow: 2px 2px #fff;
         }
 
         .vid {
@@ -536,8 +531,11 @@ a {
     .main_us {
         height: 61vh;
         background-image: url("../assets/img/us-tbl.png");
-
         background-size: none;
+
+        .historia-tbl-mbl {
+            display: none;
+        }
     }
 
     /**** SECC CONTACTO ****/
@@ -613,6 +611,175 @@ a {
             p {
                 padding-inline-start: 10px;
                 font-size: 30px;
+            }
+        }
+    }
+}
+
+/******************************************************** MOBILE 420 */
+@media (max-width: 420px) {
+    section[id] {
+        scroll-margin-top: 65px;
+    }
+
+    .logo {
+        padding-left: 0;
+    }
+
+    .main_index {
+        height: 100vh;
+        margin-top: 40px;
+        background-image: url("../assets/img/index-mbl.jpg");
+        background-size: cover;
+        background-position: center;
+
+        h1 {
+            padding-top: 350px;
+            font-size: 50px;
+            color: $color-principal;
+        }
+
+        h2 {
+            color: $color-principal;
+            font-size: 20px;
+        }
+
+    }
+
+    .main_suc {
+        height: 87vh;
+        background-image: url("../assets/img/suc-mbl.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        border: 1px solid rgb(211, 211, 211);
+        @include box-shadow;
+        padding-left: 5%;
+
+
+        .title {
+            color: $color-secundario;
+            font-size: 25px;
+        }
+
+        .vid {
+            margin-top: 3%;
+            box-shadow: 1em 1em 15px rgb(255, 94, 0, 85%);
+            border-radius: 20px;
+            border: none;
+            object-fit: cover;
+        }
+
+        .form-suc {
+            color: #fff;
+        }
+    }
+
+    /**** SECC SUCURSALES ****/
+    .main_us {
+        height: 70vh;
+        background-image: none;
+        box-shadow: none;
+        padding-top: 0;
+
+        .carrusel-fijo {
+            display: flex;
+        }
+
+        .historia-tbl-mbl {
+            display: flex;
+            flex-direction: column;
+            padding: 20px;
+
+            .txt-historia {
+                font-size: 20px;
+                margin-top: 70px;
+            }
+
+            h2 {
+                text-decoration: underline;
+                font-size: 30px;
+
+                span {
+                    color: $color-principal;
+                    text-decoration: underline;
+                }
+
+            }
+        }
+    }
+
+    /**** SECC CONTACTO ****/
+    .main_contact {
+        .h2-carrusel {
+            display: none;
+
+            .carrusel {
+                display: none;
+            }
+
+            .form-contact {
+                background-image: url("../assets/img/contacto-tbl.jpg");
+                justify-content: center;
+                align-items: center;
+            }
+        }
+
+
+
+        /**** SECC SERVICIOS ****/
+
+        .main_prest {
+            height: 145vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+            background: linear-gradient(rgb(255, 183, 0), #fff);
+
+            .prest-txt {
+                padding-top: 10px;
+                font-size: 40px;
+                color: #fff;
+                text-shadow: 5px 5px black;
+                margin-bottom: 0;
+            }
+
+            .prest1 {
+                display: flex;
+                margin-top: 0;
+                margin-bottom: 30px;
+
+                img {
+                    margin: 10px;
+                    border-radius: 10%;
+                    box-shadow: 10px 10px 1em purple;
+                }
+            }
+
+            .prest2 {
+                margin-bottom: 20vh;
+                grid-template-columns: repeat(4, 1fr);
+                grid-template-rows: repeat(3, 1fr);
+                margin-bottom: 0;
+
+                img {
+                    width: 89%;
+                    box-shadow: 6px 6px 0.5em rgb(0, 81, 0);
+                    width: 75%;
+                    margin-left: 10%;
+                }
+            }
+
+            .prest3 {
+                margin-top: 0;
+                width: 90%;
+                margin-bottom: -15%;
+
+                p {
+                    padding-inline-start: 10px;
+                    font-size: 30px;
+                }
             }
         }
     }
